# NightKnight

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.claude/: launch.json
.github/workflows/: rust.yml
branding/: README.md
deploy/: .env.example  Dockerfile  docker-compose.yml
docs/: API-COMPAT.md  ARCHITECTURE-REVIEW.md  ARCHITECTURE.md  CARPLAY-ENTITLEMENT.md  CGM-ANALYTICS-RESEARCH.md  DEPLOY-WORKER.md  PLATFORM-COMPARISON.md  REQUESTING-ENTITLEMENTS.md  SETUP.md  SILENT-PUSH.md  STATISTICAL-ANALYSIS.md  TESTING.md  openapi.yaml
ios/: README.md  project.yml
ios/NightKnight/: AGPReportView.swift  AlarmManager.swift  CarPlayGlance.swift  CarPlaySceneDelegate.swift  DashboardView.swift  DataSourceInfo.swift  GlucoseChartView.swift  HealthKitManager.swift  Info.plist  NightKnight.entitlements  NightKnightApp.swift  PhoneSyncManager.swift  RustAnalytics.swift  SettingsView.swift  SourceSetup.swift  Theme.swift  WelcomeView.swift
ios/NightKnight.xcodeproj/: project.pbxproj
ios/NightKnight.xcodeproj/xcshareddata/xcschemes/: NightKnight.xcscheme  NightKnightCarPlayTests.xcscheme  NightKnightSourcesTests.xcscheme  NightKnightWatch.xcscheme  NightKnightWidgetTests.xcscheme
ios/NightKnightCarPlayTests/: CarPlayGlanceTests.swift
ios/NightKnightSourcesTests/: AnalyticsMemoTests.swift  DexcomShareClientTests.swift  LibreLinkUpClientTests.swift  LocalStoreTests.swift  NightscoutClientTests.swift  RustAnalyticsTests.swift
ios/NightKnightUITests/: AppStorePreviewUITests.swift  DashboardUITests.swift
ios/NightKnightWatch/: Info.plist  WatchApp.swift  WatchDashboardView.swift  WatchSyncManager.swift
ios/NightKnightWatchWidget/: Info.plist  WatchComplication.swift  WatchWidget.entitlements
ios/NightKnightWidget/: Info.plist  NightKnightWidget.swift  Widget.entitlements  WidgetBundle.swift
ios/NightKnightWidgetTests/: CredentialSharingTests.swift  ReadingCacheTests.swift  WidgetRenderTests.swift
ios/Rust/: NightKnightFFI.sha256
ios/Rust/NightKnightFFI.xcframework/: Info.plist
ios/Rust/NightKnightFFI.xcframework/ios-arm64/Headers/: module.modulemap  nightknight_ffi.h
ios/Shared/: APIClient.swift  DemoData.swift  DexcomShareClient.swift  GlucoseExport.swift  GlucoseUnit.swift  Keychain.swift  LibreLinkUpClient.swift  LocalStore.swift  Models.swift  NightscoutClient.swift  ReadingCache.swift  Settings.swift  StandaloneSource.swift
ios/Tests/Fixtures/: agp-golden.json  analytics-golden.json  dexcom-glucose.json  dexcom-wt-timestamps.json  libre-connections.json  libre-factory-timestamps.json  libre-glucosehistory.json  libre-graph.json  libre-logbook.json  libre-login-bad.json  libre-login-locked.json  libre-login-ok.json  libre-login-redirect-invalid.json  libre-login-redirect.json  nightscout-entries.json  nightscout-history-page-filtered.json  nightscout-history-page.json  readings-14d.json  ssrf-table.json
ios/scripts/: build-rust-ffi.sh
marketing/appstore/: APP-STORE-COPY.md  PRIVACY-POLICY.md  README.md  capture.sh  record.sh
scripts/: dev-preview.sh  reset-account.sh
service/crates/nightknight-api/: Cargo.toml
service/crates/nightknight-api/src/: error.rs  hashing.rs  http.rs  identifier.rs  lib.rs  v1.rs  v3.rs  v4.rs
service/crates/nightknight-api/tests/: api_contract.rs
service/crates/nightknight-apns/: Cargo.toml
service/crates/nightknight-apns/src/: lib.rs
service/crates/nightknight-auth/: Cargo.toml
service/crates/nightknight-auth/src/: jwks.rs  lib.rs  scope.rs  token.rs
service/crates/nightknight-connectors/: Cargo.toml
service/crates/nightknight-connectors/src/: dexcom.rs  lib.rs  librelinkup.rs  nightscout.rs
service/crates/nightknight-core/: Cargo.toml
service/crates/nightknight-core/src/: analytics.rs  documents.rs  import.rs  lib.rs  timeutil.rs  trend.rs  units.rs
service/crates/nightknight-core/src/analytics/: export.rs  report.rs
service/crates/nightknight-crypto/: Cargo.toml
service/crates/nightknight-crypto/src/: lib.rs
service/crates/nightknight-ffi/: Cargo.toml
service/crates/nightknight-ffi/src/: lib.rs
service/crates/nightknight-ffi/tests/: golden.rs
service/crates/nightknight-server/: Cargo.toml
service/crates/nightknight-server/src/: connector.rs  main.rs
service/crates/nightknight-storage/: Cargo.toml
service/crates/nightknight-storage/src/: lib.rs  model.rs  sql.rs
service/crates/nightknight-store-d1/: Cargo.toml
service/crates/nightknight-store-d1/src/: lib.rs
service/crates/nightknight-store-sql/: Cargo.toml
service/crates/nightknight-store-sql/src/: contract_tests.rs  lib.rs
service/crates/nightknight-store-sql/tests/: postgres.rs
service/crates/nightknight-worker/: Cargo.toml  wrangler.toml
service/crates/nightknight-worker/src/: lib.rs
