[package]
name = "nightknight-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Transport-agnostic HTTP API for NightKnight: Nightscout v1/v3 compatibility plus the modern v4 API, auth resolution, and scope enforcement. Shared verbatim by the worker and the container."

[lints.rust]
unsafe_code = "forbid"

[dependencies]
nightknight-core = { workspace = true }
nightknight-storage = { workspace = true }
nightknight-auth = { workspace = true }
nightknight-connectors = { workspace = true }
nightknight-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
nightknight-storage = { workspace = true }
nightknight-store-sql = { path = "../nightknight-store-sql" }
nightknight-connectors = { workspace = true }
sha1 = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

# uuid v4 needs a JS randomness source when compiled for the worker.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1", features = ["js"] }
