[package]
name = "nightknight-apns"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Apple Push Notification service (APNs) provider for NightKnight: ES256 provider-token signing, silent-push request construction, and response classification. Pure Rust; compiles for the worker (wasm32) and the container."

[lints.rust]
unsafe_code = "forbid"

[dependencies]
p256 = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
