[package]
name = "nightknight-auth"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Authentication & authorization for NightKnight: Cloudflare Access / OIDC JWT verification (RS256, pure Rust) and the Nightscout v3 scope model. No I/O — JWKS are supplied by the runtime."

[lints.rust]
unsafe_code = "forbid"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true }

# `rsa` transitively depends on getrandom, which needs the "js" backend to compile
# for wasm. We never call it at runtime (JWT *verification* uses no RNG), but it must
# build for the Cloudflare Worker target.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
# Signing test tokens requires an RNG; only needed by tests, never at runtime.
rand = "0.8"
