[package]
name = "nightknight-connectors"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Native CGM cloud connectors for NightKnight: Dexcom Share and LibreLinkUp. The protocol logic (request building + response parsing) is pure and tested; I/O is abstracted behind an HttpClient trait so the same code runs on the worker and the container."

[lints.rust]
unsafe_code = "forbid"

[dependencies]
nightknight-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
