[package]
name = "nightknight-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "NightKnight domain model: glucose units, entries, treatments, validation, trend & analytics. Pure Rust, no I/O — the most heavily tested crate."

[lints.rust]
unsafe_code = "forbid"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
