[package]
name = "nightknight-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "NightKnight container runtime: an axum server over the Postgres/SQLite store. Serves the API and the web SPA. The deployment target for self-hosting outside Cloudflare."

[lints.rust]
unsafe_code = "forbid"

[[bin]]
name = "nightknight-server"
path = "src/main.rs"

[dependencies]
nightknight-core = { workspace = true }
nightknight-storage = { workspace = true }
nightknight-store-sql = { path = "../nightknight-store-sql" }
nightknight-api = { workspace = true }
nightknight-auth = { workspace = true }
nightknight-connectors = { workspace = true }
nightknight-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
